test/Fail/Imports/Issue1913-I.agda

module Imports.Issue1913-I where

open import Imports.Issue1913-M

instance
  x : D
  x = d
